# hamane-db

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yml  docs.yml
crates/hamane/: Cargo.toml
crates/hamane-bench/: Cargo.toml
crates/hamane-bench/src/: main.rs
crates/hamane-cli/: Cargo.toml
crates/hamane-cli/src/: main.rs
crates/hamane-core/: Cargo.toml
crates/hamane-core/benches/: distance.rs
crates/hamane-core/src/: error.rs  filter.rs  lib.rs  metric.rs  record.rs  sq8.rs
crates/hamane-index/: Cargo.toml
crates/hamane-index/src/: flat.rs  hnsw.rs  lib.rs
crates/hamane-index/tests/: recall.rs
crates/hamane-py/: Cargo.toml  pyproject.toml
crates/hamane-py/src/: lib.rs
crates/hamane-py/tests/: test_hamane.py
crates/hamane-server/: Cargo.toml
crates/hamane-server/src/: lib.rs  main.rs  replica.rs
crates/hamane-server/tests/: api.rs  replica_sync.rs  replication.rs
crates/hamane-storage/: Cargo.toml
crates/hamane-storage/src/: format.rs  lib.rs  manifest.rs  memtable.rs  segment.rs  store.rs  wal.rs
crates/hamane-storage/tests/: crash.rs
crates/hamane/examples/: write_latency.rs
crates/hamane/src/: collection.rs  database.rs  lib.rs  pool.rs
crates/hamane/tests/: api.rs  hnsw_integration.rs  model.proptest-regressions  model.rs  persistence.rs  string_ids.rs
docs/: DESIGN.md  benchmarks.md
docs/design/: index.md  query.md  replication.md  storage.md
docs/spec/: book.toml
docs/spec/src/: SUMMARY.md  benchmarks.md  cli.md  configuration.md  data-model.md  errors.md  file-format.md  getting-started.md  introduction.md  limits.md  persistence.md  replication.md  search.md
scripts/: download_sift1m.sh
todos/: 000-ci.md  201-storage-scaffold.md  202-wal.md  203-memtable.md  204-segment-writer.md  205-segment-reader.md  206-manifest.md  207-recovery.md  208-flush.md  209-read-path.md  210-crash-tests.md  211-property-tests.md  301-hnsw-build.md  302-hnsw-search.md  303-recall-tests.md  304-hnsw-serialization.md  305-hnsw-integration.md  306-filter-planner.md  307-bench-harness.md  401-compaction.md  402-simd-bench.md  403-cli.md  501-parallel-hnsw-build.md  502-build-params-tuning.md  503-parallel-search.md  504-background-maintenance.md  505-group-commit.md  506-tiered-compaction.md  507-api-polish.md  601-string-ids.md  602-sq8-quantization.md  603-http-server.md  604-python-bindings.md  701-sq8-simd.md  702-process-lock.md  703-backup.md  704-python-ci.md  705-server-auth.md  801-search-thread-pool.md  802-docker.md  (+6 more)
