[workspace]
resolver = "2"
members = [
    "crates/hamane-core",
    "crates/hamane-index",
    "crates/hamane-storage",
    "crates/hamane",
    "crates/hamane-cli",
    "crates/hamane-bench",
    "crates/hamane-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Moto1829/hamane-db"

[workspace.dependencies]
hamane-core = { path = "crates/hamane-core" }
hamane-index = { path = "crates/hamane-index" }
hamane-storage = { path = "crates/hamane-storage" }
thiserror = "2"
crc32c = "0.6"
memmap2 = "0.9"

# HNSW 構築・再現率テストが debug ビルドでは遅すぎるため最適化を有効にする
[profile.test]
opt-level = 2

[profile.dev]
opt-level = 1
