[package]
name = "hamane-py"
description = "Python bindings for hamane-db"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "hamane"
crate-type = ["cdylib"]

[dependencies]
hamane = { path = "../hamane" }
pyo3 = { version = "0.23", features = ["abi3-py39", "extension-module"] }
numpy = "0.23"
