[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "hamane"
version = "0.1.0"
description = "Embeddable vector database engine"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.optional-dependencies]
test = ["pytest", "numpy"]

[tool.maturin]
features = ["pyo3/extension-module"]
