[package]
name = "hamane-server"
description = "HTTP server for hamane-db (thin wrapper over the embedded engine)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hamane-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
hamane = { path = "../hamane" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
